style.css
/* ... */
.box-inner-logo{
    position: absolute;
    top: 50%;
    left: 50%;
    width: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;
}
.box-inner-logo:hover ~ .box-inner-fade{
    background-color: rgba(0, 0, 0, 0.3);
}
#lakioska-banner-overlay{
    position: absolute;
    top: 57%;       /* Centrado vertical */
    left: 50%;      /* Centrado horizontal */
    transform: translate(-50%, -50%); /* Para ajustar el centro exacto */
    width: 30%;   /* Tamaño de la imagen que va encima */
    height: auto;
    z-index: 2;
}
#lakioska-manual-1-section {
    width: 78vw;
    margin-inline: 11vw; 
    display: flex; 
    justify-content: center;
    margin-bottom: 5vh;
}
#indepe {
    margin-bottom: 20vh;
}
footer {
    display: flex;
    justify-content: center;
    background-color: #465953;
    height: 25vh;
}
#footer-content {
    display: flex;
    justify-content: space-between;
    width: 85vw;
    height: 100%;
    font-weight: 400;
    color: #FFFFFF;
    padding-block: 5vh;
}
#footer-left {
    text-align: left;
}
#footer-center {
    margin-top: 10vh;
    display: flex;
    text-align: center;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    margin-bottom: 0;
}
#footer-center span:nth-of-type(2){
    font-weight: 200;
}
#footer-center span a{
    color: #FFFFFF;
    text-decoration: none;
}
#footer-center span a:hover{
    color: #FFFFFF;
    text-decoration-line: underline;
}
#footer-right {
    display: flex;
    gap: 1vw;
    justify-content: end;
    text-align: right;
}
#footer-right a{
    width: 2.5vw;
    height: 2.5vw;
}
.contact-icon {
    height: 2.5vw;
}
#about-me {
    margin-bottom: 20vh;
}
#about-me a{
    font-size: 1.5em;
    color: #FB7D06;
    text-decoration: none;
}
#about-me a:hover{
    color: #FB7D06;
    text-decoration-line: underline;
}
#about-me-goodbye {
    display: flex;
    text-align: center;
    justify-content: center;
    align-items: center;
    margin-top: 5vh;
    flex-direction: column;
    gap: 5vh;
}
#about-me-goodbye p {
    font-size: 2em;
}
#about-me-goodbye img {
    width: 20vw;
}
#contact-title-container {
    display: flex;
    margin-left: 37vw;
    margin-top: 20vh;
}
#contact-title p:nth-of-type(1){
    font-size: 2.5em;
    font-weight: 300;
    margin:0
}
#contact-title p:nth-of-type(2){
    font-size: 2.5em;
    font-weight: 600;
    margin: 0;
}
#presentation-contact-div {
    display: flex;
    flex-direction: column;
    gap: 1vh;
}
#presentation-contact-div p{
    font-size: 1.2em;
    margin-bottom: 0;
}
#presentation-contact-div p .contact-icon{
    height: 2.2vw !important;
    margin-right: 1vw;
}
#presentation-contact-div p a{
    color: #000000;
    text-decoration: none;
}
#presentation-contact-div p a:hover{
    text-decoration-line: underline;
}
/* ... */

